--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -1,40 +1,25 @@
-/* 滚动条 */
+/*修改滚动条样式*/
 ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+    width: 10px;
+    height: 10px;
+    /**/
 }
 
 ::-webkit-scrollbar-track {
-    background-color: rgba(73, 177, 245, 0.2);
-    border-radius: 2em;
+    opacity: 0;
+    /*完全透明*/
+    border-radius: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #49b1f5;
-    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.4) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 75%, transparent 75%, transparent);
-    border-radius: 2em;
+    background: #bfbfbf;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #bfbfbf;
 }
 
 ::-webkit-scrollbar-corner {
-    background-color: transparent;
-}
-
-::-moz-selection {
-    color: #fff;
-    background-color: #49b1f5;
-}
-
-.history_slide {
-    text-align: left;
-    font-size: 14px;
-    background: var(--card-bg);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.history_slide_time {
-    color: #858585;
-    Font-style: italic;
-    font-weight: lighter;
+    background: #179a16;
 }
