--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -1,7 +1,8 @@
 /*修改滚动条样式*/
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 6px;
     height: 10px;
+    background-color: rgb(79 79 79 / 30%);
     /**/
 }
 
@@ -12,8 +13,8 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #bfbfbf;
-    border-radius: 10px;
+    background: #0aacfc;
+    border-radius: 20px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
