--- a/css/main.less
+++ b/css/main.less
@@ -213,3 +213,18 @@ footer a {
     padding: 30px 10px;
   }
 }
+
+
+/*自定义样式*/
+
+/*更多图片*/
+#more-img {
+  display: grid !important;
+  grid-gap: 16px;
+  grid-template-columns: repeat(3, 1fr);
+  margin: center;
+
+  img {
+    width: 100%;
+  }
+}
