--- a/css/main.less
+++ b/css/main.less
@@ -218,7 +218,7 @@ footer a {
 /*自定义样式*/
 
 /*更多图片*/
-#more-img {
+.more-img {
   display: grid !important;
   grid-gap: 16px;
   grid-template-columns: repeat(3, 1fr);
