--- a/css/main.less
+++ b/css/main.less
@@ -222,7 +222,9 @@ footer a {
   display: grid !important;
   grid-gap: 16px;
   grid-template-columns: repeat(3, 1fr);
-  margin: center;
+  margin: 15px auto;
+  border: 20px solid rgba(0, 0, 0, 0);
+  margin-left: -6px;
 
   img {
     width: 100%;
