--- a/css/main.less
+++ b/css/main.less
@@ -230,3 +230,14 @@ footer a {
     width: 100%;
   }
 }
+
+/*Font Awasome*/
+  .icon::before {
+    display: inline-block;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+  }
+  .circle-play::before {
+    font: var(--fa-font-solid);
+    content: "\f144";
+  }
