--- a/css/main.less
+++ b/css/main.less
@@ -236,7 +236,7 @@ footer a {
 }
 
 /*Font Awasome*/
-@fa-font-path: "./css/fontawasome";
+@fa-font-path: "/css/fontawasome/webfonts";
 
 .circle-play {
   .fa-icon-solid(@fa-var-circle-play);
