--- a/css/main.less
+++ b/css/main.less
@@ -69,7 +69,7 @@ footer a {
   height: 100vh;
   text-align: center;
   background-size: cover;
-  background-repeat: no-repeat;
+  /*background-repeat: no-repeat;*/
   background-attachment: fixed;
   background-position: center;
   text-shadow: 2px 2px 4px rgba(0,0,0,.86);
