--- a/css/main.less
+++ b/css/main.less
@@ -201,6 +201,14 @@ footer a {
     list-style-image: url(images/icon.gif);*/
     }
 
+  .sprite {
+      display: inline-block;
+      vertical-align: text-top;
+      height: 16px;
+      width: 16px;
+      background-repeat: no-repeat;
+  }
+
   div {
     display: flex;
     padding: 30px 50px;
