--- a/css/main.less
+++ b/css/main.less
@@ -195,19 +195,14 @@ footer a {
 
   li {
     text-decoration:none; /*去除超链接下划线*/
-    list-style:none; /*去除文字前圆圈*/
-    /*修改圆圈为自定义图片
+    /*list-style:none;*/ /*去除文字前圆圈*/
+    /*修改圆圈为自定义图片*/
     list-style-type:none;
-    list-style-image: url(images/icon.gif);*/
+    list-style-image: url(../assets/images/arrow.png);
+    height: 16px;
+    width: 16px;
     }
 
-  .sprite {
-      display: inline-block;
-      vertical-align: text-top;
-      height: 16px;
-      width: 16px;
-      background-repeat: no-repeat;
-  }
 
   div {
     display: flex;
