--- a/css/main.less
+++ b/css/main.less
@@ -193,14 +193,44 @@ footer a {
     margin: 0 auto;
   }
 
-  li {
+  .last-li-1 {
     text-decoration:none; /*去除超链接下划线*/
     /*list-style:none;*/ /*去除文字前圆圈*/
     /*修改圆圈为自定义图片*/
     list-style-type:none;
     list-style-image: url(../assets/images/arrow.png);
-    height: 16px;
-    width: 16px;
+    }
+
+  .last-li-2 {
+    text-decoration:none; /*去除超链接下划线*/
+    /*list-style:none;*/ /*去除文字前圆圈*/
+    /*修改圆圈为自定义图片*/
+    list-style-type:none;
+    list-style-image: url(../assets/images/apple.png);
+    }
+  
+  .last-li-3 {
+    text-decoration:none; /*去除超链接下划线*/
+    /*list-style:none;*/ /*去除文字前圆圈*/
+    /*修改圆圈为自定义图片*/
+    list-style-type:none;
+    list-style-image: url(../assets/images/barrier.png);
+    }
+
+  .last-li-4 {
+    text-decoration:none; /*去除超链接下划线*/
+    /*list-style:none;*/ /*去除文字前圆圈*/
+    /*修改圆圈为自定义图片*/
+    list-style-type:none;
+    list-style-image: url(../assets/images/cake.png);
+    }
+
+  .last-li-5 {
+    text-decoration:none; /*去除超链接下划线*/
+    /*list-style:none;*/ /*去除文字前圆圈*/
+    /*修改圆圈为自定义图片*/
+    list-style-type:none;
+    list-style-image: url(../assets/images/cookie.png);
     }
 
 
