--- a/css/main.less
+++ b/css/main.less
@@ -11,6 +11,7 @@ section, main {
 a:not([role=button]) {
   color: #a0e080;
   transition: .6s;
+  text-decoration-line: blink;
   &:hover { color: #1b5818 }
 }
 
@@ -199,6 +200,7 @@ footer a {
     /*修改圆圈为自定义图片*/
     list-style-type:none;
     list-style-image: url(../assets/images/arrow.png);
+    margin: 5px 0px;
     }
 
   .last-li-2 {
@@ -207,6 +209,7 @@ footer a {
     /*修改圆圈为自定义图片*/
     list-style-type:none;
     list-style-image: url(../assets/images/apple.png);
+    margin: 5px 0px;
     }
   
   .last-li-3 {
@@ -215,6 +218,7 @@ footer a {
     /*修改圆圈为自定义图片*/
     list-style-type:none;
     list-style-image: url(../assets/images/barrier.png);
+    margin: 5px 0px;
     }
 
   .last-li-4 {
@@ -223,6 +227,7 @@ footer a {
     /*修改圆圈为自定义图片*/
     list-style-type:none;
     list-style-image: url(../assets/images/cake.png);
+    margin: 5px 0px;
     }
 
   .last-li-5 {
@@ -231,6 +236,7 @@ footer a {
     /*修改圆圈为自定义图片*/
     list-style-type:none;
     list-style-image: url(../assets/images/cookie.png);
+    margin: 5px 0px;
     }
 
 
