--- a/css/minecraft.less
+++ b/css/minecraft.less
@@ -190,6 +190,12 @@ option, select {
   z-index: -1
 }
 
+/*新增*/
+.btn-border::before,.btn-danger::before,.btn:disabled::before,.btn-hexagon::before,.btn-info::before,.btn-primary1::before,.btn-secondary::before,.btn-warning::before {
+  box-shadow: 0 -4px rgba(0,0,0,.3) inset,0 4px rgba(255,255,255,.5) inset,-4px 0 rgba(255,255,255,.5) inset,4px 0 rgba(0,0,0,.3) inset;
+  z-index: -1
+}
+
 .btn-border::after,.btn-danger::after,.btn:disabled::after,.btn-hexagon::after,.btn-info::after,.btn-primary::after,.btn-secondary::after,.btn-warning::after {
   box-shadow: 0 4px 0 0 rgba(0,0,0,.15)
 }
@@ -242,6 +248,13 @@ option, select {
   background-color: #36b030;
   box-shadow: 0 -4px rgba(21,108,0,.5) inset,0 4px rgba(100,253,31,.99) inset,-4px 0 rgba(100,253,31,.5) inset,4px 0 rgba(21,108,0,.5) inset;
 }
+
+/*新增*/
+.btn-primary1 .grow,.btn-primary1::before {
+  background-color: #49b1f5;
+  /*box-shadow: 0 -4px rgba(21,108,0,.5) inset,0 4px rgba(100,253,31,.99) inset,-4px 0 rgba(100,253,31,.5) inset,4px 0 rgba(21,108,0,.5) inset;*/
+}
+
 
 .btn-primary:not(:disabled):hover .grow,.btn-primary:not(:disabled):hover::before {
   background-color: #313131;
