--- a/css/main.less
+++ b/css/main.less
@@ -111,6 +111,11 @@ footer a {
     height: 21rem; /*30rem*/
   }
 
+  /* iframe居中样式 */
+  .iframe-box {
+    position: absolute;
+  }
+
   h1 {
     font-size: 2rem;
     margin: 0 0 1rem;
