--- a/css/main.less
+++ b/css/main.less
@@ -107,14 +107,14 @@ footer a {
 
   iframe {
     border: none;
-    width: 100%;
-    height: 21rem; /*30rem*/
+    /*width: 100%;*/
+    /*height: 21rem;*/ /*30rem*/
   }
 
   /* iframe居中样式 */
-  .iframe-box {
+  /*.iframe-box {
     position: absolute;
-  }
+  }*/
 
   h1 {
     font-size: 2rem;
