--- a/css/main.less
+++ b/css/main.less
@@ -109,12 +109,31 @@ footer a {
     border: none;
     /*width: 100%;*/
     /*height: 21rem;*/ /*30rem*/
+    width: 20rem;
+    height: 11rem;
   }
 
   /* iframe居中样式 */
   /*.iframe-box {
     position: absolute;
   }*/
+
+  .iframe-body-sty {
+    position: relative;
+    overflow: hidden;
+    /*height: 600px;
+    width: 1200px;*/
+    padding: 5%;
+    background-color: red;
+  }
+
+  .iframe-body-sty>#iframe-shrink {
+      position: absolute;
+      transform: scale(0.55);
+      left: -400px;
+      top: -170px;
+  }
+
 
   h1 {
     font-size: 2rem;
