放大视频布局

--- a/css/main.less
+++ b/css/main.less
@@ -118,20 +118,10 @@ footer a {
     position: absolute;
   }*/
 
-  .iframe-body-sty {
+  .iframe-body {
     position: relative;
     overflow: hidden;
-    /*height: 600px;
-    width: 1200px;*/
-    padding: 5%;
-    background-color: red;
-  }
-
-  .iframe-body-sty>#iframe-shrink {
-      position: absolute;
-      transform: scale(0.55);
-      left: -400px;
-      top: -170px;
+    transform: scale(1.25);
   }
 
 
