--- a/css/main.less
+++ b/css/main.less
@@ -120,7 +120,7 @@ footer a {
 
   .iframe-body {
     position: relative;
-    overflow: hidden;
+    /*overflow: hidden;*/
     transform: scale(1.25);
   }
 
