--- a/css/main.less
+++ b/css/main.less
@@ -109,8 +109,12 @@ footer a {
     border: none;
     /*width: 100%;*/
     /*height: 21rem;*/ /*30rem*/
-    width: 24rem;
-    height: 13.5rem;
+    width: 21rem; /*24rem*/
+    height: 11.8rem; /*13.5rem*/
+  }
+
+  .container-style {
+    padding: 7% 0% 0% 2.5rem;
   }
 
   /* iframe居中样式 */
@@ -121,7 +125,7 @@ footer a {
   .iframe-body {
     position: relative;
     /*overflow: hidden;*/
-    transform: scale(1.40);
+    transform: scale(1.20); /*1.40*/
   }
 
 
