--- a/css/main.less
+++ b/css/main.less
@@ -96,7 +96,7 @@ footer a {
   box-shadow: 0 -5px 6px -3px rgba(0, 0, 0, 0.2), 0 -9px 12px 1px rgba(0, 0, 0, 0.14),
     0 -3px 16px 2px rgba(0, 0, 0, 0.12);
   .img {
-    width: 140%;
+    width: 28rem;
   }
 
   section {
@@ -109,12 +109,12 @@ footer a {
     border: none;
     /*width: 100%;*/
     /*height: 21rem;*/ /*30rem*/
-    width: 21rem; /*24rem*/
-    height: 11.8rem; /*13.5rem*/
+    width: 23rem; /*24rem*/
+    height: 13rem; /*13.5rem*/
   }
 
   .container-style {
-    padding: 7% 0% 0% 2.5rem;
+    padding: 7% 0% 0% 5.5rem;
   }
 
   /* iframe居中样式 */
@@ -138,9 +138,10 @@ footer a {
   }
 
   .small {
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     font-weight: lighter;
     color: rgba(255,255,255,.6);
+    position: relative;
   }
 
   h1 {
