--- a/css/main.less
+++ b/css/main.less
@@ -114,7 +114,7 @@ footer a {
   }
 
   .container-style {
-    padding: 7% 0% 0% 5.5rem;
+    padding: 7%; /*7% 0% 0% 5.5rem*/
   }
 
   /* iframe居中样式 */
@@ -137,11 +137,11 @@ footer a {
     margin: 0.3rem;
   }
 
-  .small {
+  .img-small {
     font-size: 0.8rem;
     font-weight: lighter;
     color: rgba(255,255,255,.6);
-    position: relative;
+    position: unset;
   }
 
   h1 {
