--- a/css/main.less
+++ b/css/main.less
@@ -137,6 +137,12 @@ footer a {
     margin: 0.3rem;
   }
 
+  .small {
+    font-size: 0.6rem;
+    font-weight: lighter;
+    color: rgba(255,255,255,.6);
+  }
+
   .img-small {
     font-size: 0.8rem;
     font-weight: lighter;
