--- a/css/main.less
+++ b/css/main.less
@@ -97,6 +97,7 @@ footer a {
     0 -3px 16px 2px rgba(0, 0, 0, 0.12);
   .img {
     width: 28rem;
+    margin-left: -2vw;
   }
 
   section {
@@ -135,6 +136,10 @@ footer a {
   }
   p {
     margin: 0.3rem;
+  }
+ 
+  p.view {
+    margin-right: -10vw;
   }
 
   .small {
