--- a/css/main.less
+++ b/css/main.less
@@ -70,8 +70,9 @@ footer a {
   height: 100vh;
   text-align: center;
   background-size: cover;
-  /*background-repeat: no-repeat;*/
   background-attachment: fixed;
+  background-image: url(./assets/backgrounds/bg.png);
+  /*background-repeat: no-repeat;*/
   background-position: center;
   text-shadow: 2px 2px 4px rgba(0,0,0,.86);
   color: #fff;
@@ -138,9 +139,9 @@ footer a {
     margin: 0.3rem;
   }
  
-  p.view {
-    margin-right: -10vw;
-  }
+  /* p.view {
+     margin-right: -10vw;
+   }*/
 
   .small {
     font-size: 0.6rem;
