--- a/css/main.less
+++ b/css/main.less
@@ -71,7 +71,7 @@ footer a {
   text-align: center;
   background-size: cover;
   background-attachment: fixed;
-  background-image: url(./assets/backgrounds/bg.png);
+  background-image: url(/assets/backgrounds/bg.png);
   /*background-repeat: no-repeat;*/
   background-position: center;
   text-shadow: 2px 2px 4px rgba(0,0,0,.86);
