add footer commit ID

--- a/css/main.less
+++ b/css/main.less
@@ -59,7 +59,18 @@ footer {
   padding: 20px;
   text-align: center;
   background-color: #000;
+  
+  a.version {
+    /* position: fixed; */
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    color: #ababab;
+  }
 }
+
+  
+
 footer a {
   display: block;
   text-decoration: none;
